@@ -1,3 +1,7 @@
+2006-05-08  Ales Hakl  <ales at hakl dot net>
+
+	* src/native.c: string->object and object->string
+
 2006-05-01  Ales Hakl  <ales at hakl dot net>
 
 	* dfsch/dfsch.h (DFSCH_DISCARD_ARG): Macro for unneeded arguments
